--- a/npcs/Races Classes and Subclasses/class_abilities.yaml
+++ b/npcs/Races Classes and Subclasses/class_abilities.yaml
@@ -284,6 +284,9 @@
     - content: When you cast a spell that targets only one creature and doesn't have a range of self, you can spend a number of sorcery points equal to the spell's level to target a second creature in range with the same spell 
                (1 sorcery point if the spell is a cantrip). To be eligible, a spell must be incapable of targeting more than one creature at the spell's current level. For example, Magic Missile and Scorching Ray aren't 
                eligible, but Ray of Frost and Chromatic Orb are.
+    - title: Magical Guidance
+    - content: When you reach 5th level, you can tap into your inner wellspring of magic to try and conjure success from failure. When you make an ability check that fails, you can spend 1 sorcery point to reroll the d20, and 
+               you must use the new roll, potentially turning the failure into a success
     - title: Sorcerous Restoration
     - content: you regain 4 expended sorcery points whenever you finish a Short Rest		  
 		
