--- a/npcs/Races Classes and Subclasses/monk subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/monk subclasses.yaml
@@ -303,7 +303,7 @@
     - title: Pragmatism
     - content: You embrace a more pragmatic view, gaining the following benefits
     - content: You have proficiency in improvised weapons. Improvised melee weapons now count as Monk weapons for you.
-    - content: Once per tum. when you deal damage to a prone creature, you can add 1 d6 + half your Monk level (rounded down) to the damage.
+    - content: Once per turn. When you deal damage to a prone creature, you can add 1d6 + half your Monk level (rounded down) to the damage.
     - content: You gain proficiency in Light armor. If your Strength is equal to or higher than your Dexterity, you can gain the benefits of Martial Arts, Unannored Movement and Unarmored Defense (AC =Armor's AC + 
     - content: Dexterity modifier + Wisdom modifier) while wearing light armor.
     - title: Soak It Up
