--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -306,7 +306,7 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: Dumas_Family
+    - id: dumas_family
       name: The Dumas Family
       role: Matriach
       
