--- a/npcs/delores_dumas.yaml
+++ b/npcs/delores_dumas.yaml
@@ -601,7 +601,7 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Delores Dumas is the Daughter of Anastasia Dumas and mother of Nicodeamus and Irini Dumas. Delores grew up under her mother's cruel thumb and was prone to rebellion. At the age of 19 she met Saul Branstock and soon
+      Delores Dumas is the Daughter of Anastasia Dumas and mother of Nicodeamus, Irini and Solomon Dumas. Delores grew up under her mother's cruel thumb and was prone to rebellion. At the age of 19 she met Saul Branstock and soon
       became pregnant, giving birth to her first child, Nicodeamus. Upon his birth, he was immediately taken from her by her grandmother and Saul helped her flee from her family. Her and Saul lived happily for many years
       though she always missed her son. One day a young familiar stranger arrived at their home. This stranger proceeded to put her in chains, gun down her husband and burn down their home. On their way back to the family
       home Delores was horrified to learn that this cold-hearted youth was in fact, Nicodeamus, all grown up. This event was the first large blow to her sanity. Her vicious son tortued and tormented her the entire way back
