--- a/npcs/nicodeamus_dumas.yaml
+++ b/npcs/nicodeamus_dumas.yaml
@@ -430,7 +430,7 @@ npc:
     # ???Maximum length???
     #
     secrets:
-      The Dumas Family, while having some actual familial ties, is definitely more of a cult than a family. He is also married to his half-sister
+      He harbors resentment against his grandmotehr and uncles due to her treatment of his mother, wife and little brother
   #
   # The D & D stats block:
   # All integers.
